<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="25dp"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    tools:context=".Main" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:typeface="normal"
        android:text="@string/title_activity_frog_main" />

    <Button
        android:id="@+id/frog_play_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/green_button"
        android:gravity="center"
        android:text="@string/frog_play_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/frog_scores_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/green_button"
        android:gravity="center"
        android:text="@string/frog_scores_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/frog_back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/green_button"
        android:gravity="center"
        android:text="@string/frog_back_button"
        android:textSize="30sp" />

</LinearLayout>